{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 124,
  "lineage": "56767df9-fd35-579a-f465-80023e732035",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e78d88927924b85c",
            "public_dns": "ec2-18-180-83-7.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.180.83.7",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ae9b7a7fb0ba2813",
            "owner_id": "202264371959",
            "tags": {
              "Name": "igw_test"
            },
            "vpc_id": "vpc-002a44d29ba2db78e"
          },
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e78d88927924b85c",
            "id": "nat-045bbd8d978722c5d",
            "network_interface_id": "eni-006c71c6a89816380",
            "private_ip": "10.0.1.103",
            "public_ip": "18.180.83.7",
            "subnet_id": "subnet-07bb7626c9f5968f6"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ae9b7a7fb0ba2813",
            "id": "r-rtb-0a0ba5b522219522e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0ba5b522219522e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.igw_test",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-053dc7903b9f35202",
            "owner_id": "202264371959",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Local Route Table for Isolated Private Subnet"
            },
            "vpc_id": "vpc-002a44d29ba2db78e"
          },
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_us_east_1a_nated",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06b0f0b4678cc33c7",
            "owner_id": "202264371959",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-045bbd8d978722c5d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main Route Table for NAT-ed subnet"
            },
            "vpc_id": "vpc-002a44d29ba2db78e"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_nat_gateway.gw",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_nated",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e90167e13da85b34",
            "route_table_id": "rtb-06b0f0b4678cc33c7",
            "subnet_id": "subnet-07bb7626c9f5968f6"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_nat_gateway.gw",
            "aws_route_table.my_vpc_us_east_1a_nated",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_us_east_1a_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095f51066fdd0ff0a",
            "route_table_id": "rtb-053dc7903b9f35202",
            "subnet_id": "subnet-0120af81e0f224109"
          },
          "dependencies": [
            "aws_route_table.my_vpc_private",
            "aws_subnet.subnet_private",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:202264371959:subnet/subnet-0120af81e0f224109",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0120af81e0f224109",
            "map_public_ip_on_launch": false,
            "owner_id": "202264371959",
            "tags": {
              "Name": "Isolated Private Subnet"
            },
            "vpc_id": "vpc-002a44d29ba2db78e"
          },
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:202264371959:subnet/subnet-07bb7626c9f5968f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07bb7626c9f5968f6",
            "map_public_ip_on_launch": true,
            "owner_id": "202264371959",
            "tags": {
              "Name": "subnet_public"
            },
            "vpc_id": "vpc-002a44d29ba2db78e"
          },
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:202264371959:vpc/vpc-002a44d29ba2db78e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df4146bf1006c47b",
            "default_route_table_id": "rtb-0a0ba5b522219522e",
            "default_security_group_id": "sg-03dc8bc1939315140",
            "dhcp_options_id": "dopt-4db8e92a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-002a44d29ba2db78e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a0ba5b522219522e",
            "owner_id": "202264371959",
            "tags": {
              "Name": "vpc_test"
            }
          }
        }
      ]
    }
  ]
}